--- a/Classification/Classification_HW3.ipynb
+++ b/Classification/Classification_HW3.ipynb
@@ -2041,12 +2041,13 @@
     "Let's try the following values of the parameter C: [0.01, 0.1, 1, 10, 100]. <br>\n",
     "Train models using all the features as in Q4. <br>\n",
     "Calculate the accuracy on the validation dataset and round it to 3 decimal digits. <br>\n",
-    "Which of these C leads to the best accuracy on the validation set? <br>"
+    "Which of these C leads to the best accuracy on the validation set? <br>\n",
+    "Ans: 0.01 (choose smallest C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "a9132c70-f627-48d4-998e-3dfc4a92d9b2",
    "metadata": {},
    "outputs": [],
@@ -2076,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "id": "065a28f3-71b9-4577-832d-fbf15cd7e385",
    "metadata": {},
    "outputs": [
